# orrery

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
dreamwalk/: README.md  codex-package.json  commands.generated.json  consensus.generated.json  local-sources.generated.json  pyproject.toml  routes.generated.json
dreamwalk/dreamwalk/: __init__.py  cli.py  commands.py  consensus.py  execution.py  inventory.py  manifests.py  models.py  router.py  tool_registry.py
dreamwalk/scripts/: build_manifests.py
dreamwalk/tests/: test_commands.py  test_consensus.py  test_inventory.py  test_manifests.py
public/data/: comets.json  distant-objects.json  main-belt.json  meteor-showers.json
scripts/: postgzip.mjs  prebake-asteroids.ts  prebake-comets.ts  prebake-stars.ts  prebake.ts
src/: Orrery.tsx  index.css
src/data/: body-symbols.ts  constellation-symbols.ts  constellations.ts  deepspace.ts  moons.ts  mythology.ts  planets.ts
src/lib/: kepler.ts  satellites.ts  themes.ts  themes.tsx
src/scene/: Asterisms.tsx  Asteroids.tsx  Bodies.tsx  Comets.tsx  DeepSky.tsx  Scene.tsx  (+4 more)
swarm/: README.md  codex-package.json  commands.generated.json  consensus.generated.json  local-sources.generated.json  pyproject.toml  routes.generated.json
swarm/scripts/: build_manifests.py
swarm/swarm/: __init__.py  cli.py  commands.py  consensus.py  execution.py  inventory.py  manifests.py  router.py  tool_registry.py
swarm/tests/: test_commands.py  test_consensus.py  test_inventory.py  test_manifests.py
(+3 files in other folders)
